[package]
name = "apex_twitter_status"
version = "0.1.0"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.1.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
kuon = "0.0.11"
anyhow = "1.0.32"
maplit = "1.0.2"
